--- a/Music Project/MainStoryboard.storyboard
+++ b/Music Project/MainStoryboard.storyboard
@@ -323,6 +323,7 @@
                     <connections>
                         <outlet property="imageView" destination="E2m-Tl-qX5" id="A3u-TS-VHE"/>
                         <outlet property="nameLabel" destination="mf4-Xd-KPZ" id="Ja5-mo-rS5"/>
+                        <outlet property="navBar" destination="F9w-bz-wf6" id="FTu-nI-FJd"/>
                         <outlet property="taglineLabel" destination="rDL-kB-see" id="Y0C-ax-aAo"/>
                     </connections>
                 </viewController>
@@ -418,12 +419,23 @@
                                     <action selector="selectPhoto:" destination="iYy-14-XSd" eventType="touchUpInside" id="6kx-qy-lnt"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="u9w-ct-GXb">
+                                <rect key="frame" x="148" y="152" width="37" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Clear">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="clear:" destination="iYy-14-XSd" eventType="touchUpInside" id="usi-7I-J6S"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <connections>
                         <outlet property="imageView" destination="8rx-u8-B1K" id="wJx-EK-cU7"/>
                         <outlet property="nameTextField" destination="c1m-4q-mi8" id="IEF-XO-xcD"/>
+                        <outlet property="navBar" destination="ihf-hu-9az" id="KVC-IT-13h"/>
                         <outlet property="taglineTextField" destination="oaq-WM-VvV" id="Y9c-LU-Eu7"/>
                         <outlet property="takePhotoButton" destination="TGv-cb-215" id="J5q-Ng-8cT"/>
                     </connections>
